@@ -7,6 +7,7 @@
    hiding, smplayer won't remember it so when the main window is made visible
    the file will be played. And this setting also affects audio files, which
    maybe is not appropriate.
+ * Updated the Polish translation.
 
 [b]Version 2007-09-16[/b]
  * Replaced the QAction's activated() signal with triggered(). Now smplayer
